terraform/main.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name        = var.vpc_name
    ENVIRONMENT = var.environment
    ManagedBy   = "terraform"
    Project     = "AWS production infrastructure"
  }

}
